[package]
name = "protego-ebpf"
description = "🛡️ Protego is an eBPF-based security tool for Linux designed to enhance system protection."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
protego-common = { path = "../protego-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "protego"
path = "src/main.rs"